--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
     
 }
 
+
 nav{
     width: 100%;
-    height: 8vh;
+    height: 7%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,7 +22,7 @@ nav{
     width: 15vw;
 }
 
-hr {
+hr{
   height: 2px; 
   background-color: #ada8a8; 
   border: none; 
@@ -36,12 +37,12 @@ hr {
     outline: none;
     resize: none;
     background-color:white;
-    width: 80%;
+     box-sizing: border-box;
     
 }
 .left-side{
     width: 65vw;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -84,13 +85,158 @@ hr {
     
 }
 .leftandright{
-    display: flex;
+    display: flex; 
 }
 .leftandright{
     width: 100%;
     height: 100%;
 }
 
+.navline{
+    width: 100%;
+    opacity: 30%;
+}
+.posting{
+    display: flex;
+    align-items: flex-start;
+}
+
+.right >h2{
+    font-family: 'Oswald', sans-serif;
+    margin-top: 5%;
+    margin: 5%;
+    align-self: flex-start;
+    
+}
+
+.right{
+    width: 35vw;
+}
+.post-appears{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.top{
+    display:flex;
+    justify-content: space-between;
+    height: 18%;
+    align-items: center;
+}
+.user{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 55%;
+}
+.right{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: auto;
+    
+}
+.post-appears-right{
+    width: 85%;
+}
+.post-appears{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-top:30%;
+}
+.textarea-posted{
+    border: none;
+    border-color: transparent;
+    outline: none;
+    resize: none;
+    background-color:white;
+     box-sizing: border-box;
+}
+.post-appears{
+    border:1px solid rgb(184, 181, 181,0.3);
+    padding-top:5%;
+    padding-bottom:6%;  
+    border-radius: 7%;
+
+}
+.buttondelete{
+    width: 10%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.heart-comment{
+    display: flex;
+    justify-content: space-between;
+    width: 15%;
+    
+}
 
 
 
+.delete:hover{
+    content: url('https://d2beiqkhq929f0.cloudfront.net/public_assets/assets/000/064/030/original/delete-color-filled.png?1706888714');
+    
+    width: 16px;
+    height: 18px;
+}
+.delete1:hover{
+    content: url('https://d2beiqkhq929f0.cloudfront.net/public_assets/assets/000/064/030/original/delete-color-filled.png?1706888714');
+    
+    width: 16px;
+    height: 18px;
+}
+
+.heart:hover{
+    content: url('https://d2beiqkhq929f0.cloudfront.net/public_assets/assets/000/064/025/original/state_clicked.png?1706888455');
+    width: 22px;
+    height: 20px;
+}
+.comment-box{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    display: flex;
+    justify-content: center;
+    width: 90%;
+    padding-top:30%;
+    border:1px solid rgb(184, 181, 181,0.3);
+    padding-top:5%;
+    padding-bottom:6%;  
+    border-radius: 7%;
+    align-self: flex-end;
+}
+
+.main-post-block{
+    width:90%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.comment-box-right{
+    width: 85%;
+}
+.top-comment{
+    display:flex;
+    justify-content: space-between;
+    height: 18%;
+    align-items: center;
+}
+.user-comment{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 55%;
+}
+.buttondelete-comment{
+    width: 10%;
+    display: flex;
+    justify-content: space-between;
+}
+.heart-comment-comment{
+    display: flex;
+    justify-content: space-between;
+    width: 15%;
+    
+}
